--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agosto Liláis</title>
-    <link rel="styles" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -28,13 +28,13 @@
         <p>
             Denunciar é um ato de coragem. Se você  presenciar ou sofrer violência, procure ajuda.
         </p>
+        <img src="imagem/agosto lilais.jpg" alt="imagem que representa o agosto lilais">
 
     </main>
+    <footer>
+        <p>esse site foi criado por kevin</p>
 
-
-
-
-
+    </footer>
     
 </body>
 </html>
